# cookietest

./: .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  pylintrc  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check_code.yml  deploy.yml
cookietest/: __init__.py
tests/: test_cookietest.py
